Fix top spacing for warning and success messages

--- a/resources/go-live-update-urls.css
+++ b/resources/go-live-update-urls.css
@@ -6,8 +6,7 @@
 .notice,
 div.updated,
 div.error {
-	margin-bottom: 25px;
-	margin-left: 15px;
+	margin: 15px 15px 25px 15px;
 }
 
 .update-nag {
